# PL0Interpreter

./: .ghci  AppRunner.hs  FileIO.hs  Grammer.hs  Interpreter.hs  PL0Interpreter.cabal  Parser.hs  README.md  Runner.hs  StaticChecker.hs  build.cabal
.github/workflows/: haskell.yml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
test_prog/: 1.pl0  Main.hs  example.txt
test_prog/cases/base_1/: expected.pl0
test_prog/cases/for_statement_1/: input.pl0
test_prog/expected/: 2.pl0  3.pl0  4.pl0
test_prog/program/: +=_-=.pl0  3.pl0  ProcParam1.pl0  ProcParam2.pl0  ProcReturnParamRecurse.pl0  StringSlicing.pl0  Strings.pl0  StringsConcat.pl0  array1.pl0  array2.pl0  arrayRealloc.pl0  for-statement1.pl0  forEach1.pl0  logicalops.pl0
tests/cases/for_statement_1/: expected.pl0
